kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-rubyapp
  namespace: helloworld-kustomize
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate 
  selector:
    matchLabels:
      app: helloworld-rubyapp
  template:
    metadata:
      labels:
        app: helloworld-rubyapp
    spec:
      containers:
      - name: rubyapp
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/webops/yy-2006-0001-starter-pack-0:da2d6e432ebc073beeddb4e1831286eed67d22fc
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4567
