kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: helloworld-<mynamespace>-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
  - hosts:
    - helloworld-rubyapp.apps.yy-2006-0001.cloud-platform.service.justice.gov.uk
  rules:
  - host: helloworld-rubyapp.apps.yy-2006-0001.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rubyapp-service
            port:
              number: 4567
